karnc/tests/fixtures/positive/168_cross_ctx_capability_alias/src/platform/time.karn
context platform.time

exports capability { Clock }

capability Clock {
  fn now() -> Effect[Int]
}

provides Clock = SystemClock {
  fn now() -> Effect[Int] {
    0
  }
}
