karnc/tests/fixtures/negative/137_external_provider_in_context/src/demo/svc.karn
context demo.svc

capability Clock {
  fn now() -> Effect[Int]
}

provides Clock = SystemClock
